# ChessPiecesPlacing

./: .gitignore  ChessPiecesPlacing.cabal  ReadMe.txt  run.bat
src/: Main.hs  Optimised.hs
test/: Test.hs
