Name:           ChessPiecesPlacing
Version:        0.0.0.0
License:        BSD3
Author:         Stanislav Chernichkin
Maintainer:     Stanislav Chernichkin <schernichkin@gmail.com>
Category:       Puzzles
Homepage:       https://github.com/schernichkin/ChessPiecesPlacing
Synopsis:       Chess pieces placing puzzle solver
Description:    Solves problem of placing given number of chess pieces on a chessboard
Build-Type:     Simple
Stability:      Experemental
Cabal-version:  >= 1.8

Program
    Build-Depends:    base
    Hs-Source-Dirs:   src
    GHC-Options:      -Wall -O2

test-suite Tests
    hs-source-dirs: test
    main-is: Test.hs
    type: exitcode-stdio-1.0
    ghc-options: -Wall -O2 -main-is Test.main
    build-depends: ChessPiecesPlacing
                 , base
                 , QuickCheck
                 , HUnit
                 , test-framework-quickcheck2
                 , test-framework-hunit
                 , test-framework