Name:           ChessPiecesPlacing
Version:        0.0.0.0
License:        BSD3
Author:         Stanislav Chernichkin
Maintainer:     Stanislav Chernichkin <schernichkin@gmail.com>
Category:       Puzzles
Homepage:       https://github.com/schernichkin/ChessPiecesPlacing
Synopsis:       Chess pieces placing puzzle solver
Description:    Solves problem of placing given number of chess pieces on a chessboard
Build-Type:     Simple
Stability:      Experemental
Cabal-version:  >= 1.8

executable ChessPiecesPlacer
    Hs-Source-Dirs:   src
    main-is: Main.hs
    Build-Depends: base                 >= 4.7.0.1
                 , optparse-applicative == 0.10.0
    GHC-Options:      -Wall -O2

test-suite Tests
    hs-source-dirs: test, src
    main-is: Test.hs
    other-modules: Main
    type: exitcode-stdio-1.0
    ghc-options: -Wall -O2 -main-is Test.runAllTests
    build-depends: base                       >= 4.7.0.1
                 , optparse-applicative       == 0.10.0
                 , QuickCheck                 >= 0.2.4
                 , HUnit                      >= 1.2.5.2
                 , test-framework-quickcheck2 >= 0.3.0.3
                 , test-framework-hunit       >= 0.3.0.1
                 , test-framework             >= 0.8.0.3